--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,36 @@ server:
       cookie:
         name: JSESSIONID
 
+
 spring:
+  shardingsphere:
+    datasource:
+      names: db0,db1
+      db0:
+        type: com.zaxxer.hikari.HikariDataSource
+        url: jdbc:mysql://192.168.1.100:3306/db0?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+        username: root
+        password: root
+        driver-class-name: com.mysql.cj.jdbc.Driver
+      db1:
+        type: com.zaxxer.hikari.HikariDataSource
+        url: jdbc:mysql://192.168.1.100:3306/db1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+        username: root
+        password: root
+        driver-class-name: com.mysql.cj.jdbc.Driver
+    sharding:
+      tables:
+        order:
+          actual-data-nodes: db$->{0..1}.order$->{0..1}
+          key-generator:
+            colum: id #自增列的名称
+            type: SNOWFLAKE #自增列值生成器类型，缺省表示使用默认自增列值生成器。可使用用户自定义的列值生成器或选择内置类型：SNOWFLAKE/UUID
+          database-strategy:
+            inline:
+              sharding-column: order_id #分片列名称
+              algorithm-expression: order$->{order_id % 2} #分片算法表达式
+      binding-tables: order #绑定表规则列表
+      broadcast-tables: config #广播表规则列表
   main:
     allow-bean-definition-overriding: true #比较严格，所以呢，需要在配置文件添加一个属性
   application:
