--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,16 +10,10 @@ server:
 spring:
   shardingsphere:
     datasource:
-      names: db0,db1
+      names: db0
       db0:
         type: com.zaxxer.hikari.HikariDataSource
         jdbc-url: jdbc:mysql://localhost:3306/db0?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-        username: root
-        password: root
-        driver-class-name: com.mysql.cj.jdbc.Driver
-      db1:
-        type: com.zaxxer.hikari.HikariDataSource
-        jdbc-url: jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
         username: root
         password: root
         driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,7 +22,7 @@ spring:
       broadcast-tables: config #广播表规则列表
       tables:
         order:
-          actual-data-nodes: db0.order$->{0..1},db1.order$->{0..1}
+          actual-data-nodes: db0.order$->{0..1}
           key-generator:
             column: id #自增列的名称
             type: SNOWFLAKE #自增列值生成器类型，缺省表示使用默认自增列值生成器。可使用用户自定义的列值生成器或选择内置类型：SNOWFLAKE/UUID
@@ -36,10 +30,6 @@ spring:
             inline:
               sharding-column: order_id #分片列名称
               algorithm-expression: order$->{order_id % 2} #分片算法表达式
-          database-strategy:
-            inline:
-              sharding-column: order_id #分片列名称
-              algorithm-expression: db$->{order_id % 2} #分片算法表达式
     props:
       sql:
         show: true
